--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@
 
   color-scheme: light dark;
   color: rgb(255, 249, 249);
-  background-color: #ffffff;
+  background-color: #111;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
